add produzione module base elements

--- a/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
+++ b/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
@@ -23,4 +23,8 @@
 	  <Folder Include="Validators\" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <ProjectReference Include="..\BeerDrivenDesign.Modules.Produzione\BeerDrivenDesign.Modules.Produzione.csproj" />
+	</ItemGroup>
+
 </Project>
