--- a/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
+++ b/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
@@ -1,14 +1,23 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>net6.0</TargetFramework>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <Nullable>enable</Nullable>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.3" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="Validators\BrewBeerValidator.cs" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BeerDrivenDesign.ReadModel\BeerDrivenDesign.ReadModel.csproj" />
+    </ItemGroup>
 
 </Project>
