--- a/BeerDrivenDesign.ReadModel/BeerDrivenDesign.ReadModel.csproj
+++ b/BeerDrivenDesign.ReadModel/BeerDrivenDesign.ReadModel.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="11.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.16.1" />
   </ItemGroup>
