--- a/BeerDrivenDesign.ReadModel/BeerDrivenDesign.ReadModel.csproj
+++ b/BeerDrivenDesign.ReadModel/BeerDrivenDesign.ReadModel.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -7,10 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="FluentValidation" Version="11.0.3"/>
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0"/>
-        <PackageReference Include="MongoDB.Driver" Version="2.16.1"/>
-        <PackageReference Include="Muflone" Version="6.0.4"/>
+        <PackageReference Include="FluentValidation" Version="11.0.3" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="MongoDB.Driver" Version="2.16.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\BeerDrivenDesign.Api.Shared\BeerDrivenDesign.Api.Shared.csproj" />
     </ItemGroup>
 
 </Project>
