--- a/BeerDrivenDesign.Api/appsettings.json
+++ b/BeerDrivenDesign.Api/appsettings.json
@@ -15,6 +15,15 @@
             "TokenExpiration": 5,
             "RefreshTokenExpiration": 4320,
             "CookieName": "accessToken"
-        }
+        },
+        "EventStoreSettings": {
+            "ConnectionString": "ConnectTo=tcp://localhost:1113;UseSslConnection=false"
+        },
+        "MongoDbSettings": {
+            "ConnectionString": "mongodb://localhost"
+        },
+        "ServiceBusSettings": {
+            "ConnectionString": "Endpoint=sb://brewup.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=1Iy45wRMiuVRD6A/hTYh3dH8Lgn3K/AHxkUMt5QbdOA="
+        } 
     }
 }
