--- a/BeerDrivenDesign.Modules.Produzione.Domain/BeerDrivenDesign.Modules.Produzione.Domain.csproj
+++ b/BeerDrivenDesign.Modules.Produzione.Domain/BeerDrivenDesign.Modules.Produzione.Domain.csproj
@@ -12,6 +12,7 @@
     
     <ItemGroup>
         <PackageReference Include="Muflone" Version="6.0.5" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     </ItemGroup>
     
     <ItemGroup>
