--- a/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
+++ b/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
@@ -7,15 +7,15 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.6" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.7" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
 		<PackageReference Include="Microsoft.Extensions.PlatformAbstractions" Version="1.1.0" />
-		<PackageReference Include="FluentValidation.AspNetCore" Version="11.0.3" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
 		<PackageReference Include="Serilog" Version="2.11.0" />
 		<PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
 		<PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -24,7 +24,10 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\BeerDrivenDesign.Api.Transport.Azure\BeerDrivenDesign.Api.Transport.Azure.csproj" />
+	  <ProjectReference Include="..\BeerDrivenDesign.Modules.Produzione.Domain\BeerDrivenDesign.Modules.Produzione.Domain.csproj" />
 	  <ProjectReference Include="..\BeerDrivenDesign.Modules.Produzione\BeerDrivenDesign.Modules.Produzione.csproj" />
+	  <ProjectReference Include="..\BeerDrivenDesign.ReadModel.MongoDb\BeerDrivenDesign.ReadModel.MongoDb.csproj" />
 	</ItemGroup>
 
 </Project>
