--- a/BeerDrivenDesign.Api/Properties/launchSettings.json
+++ b/BeerDrivenDesign.Api/Properties/launchSettings.json
@@ -9,7 +9,7 @@
     }
   },
   "profiles": {
-    "BrewUpApiTemplate": {
+    "BeerDrivenDesign": {
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
