--- a/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
+++ b/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net6.0</TargetFramework>
@@ -9,12 +9,16 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
-        <PackageReference Include="FluentValidation.AspNetCore" Version="11.0.3" />
-        <PackageReference Include="Muflone" Version="6.0.4" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.2" />
+        <PackageReference Include="Muflone" Version="6.0.5" />
     </ItemGroup>
 
     <ItemGroup>
       <ProjectReference Include="..\BeerDrivenDesign.ReadModel\BeerDrivenDesign.ReadModel.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="EventsHandlers\" />
     </ItemGroup>
 
 </Project>
