Use RabbitMQ as broker

--- a/BeerDrivenDesign.Api/appsettings.json
+++ b/BeerDrivenDesign.Api/appsettings.json
@@ -22,8 +22,18 @@
         "MongoDbSettings": {
             "ConnectionString": "mongodb://localhost"
         },
+        "BrokerOptions": {
+            "Type": "RMQ" 
+        }, 
         "ServiceBusSettings": {
             "ConnectionString": "Endpoint=sb://brewup.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=1Iy45wRMiuVRD6A/hTYh3dH8Lgn3K/AHxkUMt5QbdOA="
-        } 
+        },
+        "RabbitMQSettings": {
+            "BrokerUrl": "rabbitmq://localhost/",
+            "ExchangeName": "i3d.exchange",
+            "QueueName": "i3d.production",
+            "Login": "myuser",
+            "Password": "mypassword"
+        }
     }
 }
