--- a/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
+++ b/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
@@ -25,6 +25,7 @@
 
 	<ItemGroup>
 	  <ProjectReference Include="..\BeerDrivenDesign.Api.Transport.Azure\BeerDrivenDesign.Api.Transport.Azure.csproj" />
+	  <ProjectReference Include="..\BeerDrivenDesign.Api.Transport.RabbitMq\BeerDrivenDesign.Api.Transport.RabbitMq.csproj" />
 	  <ProjectReference Include="..\BeerDrivenDesign.Modules.Produzione.Domain\BeerDrivenDesign.Modules.Produzione.Domain.csproj" />
 	  <ProjectReference Include="..\BeerDrivenDesign.Modules.Produzione\BeerDrivenDesign.Modules.Produzione.csproj" />
 	  <ProjectReference Include="..\BeerDrivenDesign.ReadModel.MongoDb\BeerDrivenDesign.ReadModel.MongoDb.csproj" />
