Produzione della birra iniziata

--- a/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
+++ b/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
@@ -20,6 +20,7 @@
 
     <ItemGroup>
       <Folder Include="EventsHandlers\" />
+      <Folder Include="Endpoints\" />
     </ItemGroup>
 
 </Project>
