Using Muflone.Transport.Azure.

--- a/BeerDrivenDesign.Api/appsettings.json
+++ b/BeerDrivenDesign.Api/appsettings.json
@@ -20,7 +20,8 @@
             "ConnectionString": "ConnectTo=tcp://localhost:1113;UseSslConnection=false"
         },
         "MongoDbSettings": {
-            "ConnectionString": "mongodb://localhost"
+            "ConnectionString": "mongodb://localhost",
+            "DatabaseName": "BrewUp-Production"
         },
         "BrokerOptions": {
             "Type": "RMQ" 
