Sorting services initialization

--- a/BeerDrivenDesign.Api/appsettings.json
+++ b/BeerDrivenDesign.Api/appsettings.json
@@ -24,8 +24,8 @@
             "DatabaseName": "BrewUp-Production"
         },
         "BrokerOptions": {
-            "Type": "RMQ" 
-        }, 
+            "Type": "Azure"
+        },
         "ServiceBusSettings": {
             "ConnectionString": "Endpoint=sb://brewup.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=1Iy45wRMiuVRD6A/hTYh3dH8Lgn3K/AHxkUMt5QbdOA="
         },
@@ -35,6 +35,7 @@
             "QueueName": "i3d.production",
             "Login": "myuser",
             "Password": "mypassword"
-        }
+        },
+        "ClientId": "BeerDrivenDesign"
     }
 }
