--- a/BeerDrivenDesign.Api.Shared/BeerDrivenDesign.Api.Shared.csproj
+++ b/BeerDrivenDesign.Api.Shared/BeerDrivenDesign.Api.Shared.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
+		<PackageReference Include="FluentValidation" Version="11.2.0" />
 		<PackageReference Include="Muflone" Version="6.0.5" />
 		<PackageReference Include="Muflone.Eventstore" Version="6.0.2" />
 	</ItemGroup>
