Organiza Comamnds and Events. Removed unused commands/events.

--- a/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
+++ b/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="EventsHandlers\" />
+      <Folder Include="Consumers\DomainEvents\" />
       <Folder Include="Endpoints\" />
     </ItemGroup>
 
