--- a/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
+++ b/BeerDrivenDesign.Modules.Produzione/BeerDrivenDesign.Modules.Produzione.csproj
@@ -21,6 +21,7 @@
 
     <ItemGroup>
       <Folder Include="Consumers\DomainEvents\" />
+      <Folder Include="Hubs\" />
     </ItemGroup>
 
 </Project>
