--- a/BeerDrivenDesign.Api/appsettings.json
+++ b/BeerDrivenDesign.Api/appsettings.json
@@ -21,7 +21,7 @@
         },
         "MongoDbSettings": {
             "ConnectionString": "mongodb://localhost",
-            "DatabaseName": "BrewUp-Production"
+            "DatabaseName": "BrewUp-Design"
         },
         "BrokerOptions": {
             "Type": "Azure"
