--- a/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
+++ b/BeerDrivenDesign.Api/BeerDrivenDesign.Api.csproj
@@ -21,6 +21,8 @@
 	<ItemGroup>
 	  <Folder Include="Models\" />
 	  <Folder Include="Modules\Acquisti\" />
+	  <Folder Include="Modules\Magazzino\Concretes\" />
+	  <Folder Include="Modules\Magazzino\Endpoints\" />
 	  <Folder Include="Modules\Vendite\" />
 	</ItemGroup>
 
